flex_n_bison/lab2_simple_calculator/temp.output
Grammar

    0 $accept: prog $end

    1 prog: %empty
    2     | prog line

    3 line: '\n'
    4     | exp '\n'

    5 exp: INT
    6    | exp exp '+'
    7    | exp exp '-'
    8    | exp exp '/'
    9    | exp exp '*'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'*' (42) 9
'+' (43) 6
'-' (45) 7
'/' (47) 8
error (256)
INT (258) 5


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
prog (10)
    on left: 1 2, on right: 0 2
line (11)
    on left: 3 4, on right: 2
exp (12)
    on left: 5 6 7 8 9, on right: 4 6 7 8 9


State 0

    0 $accept: . prog $end
    1 prog: . %empty
    2     | . prog line

    $default  reduce using rule 1 (prog)

    prog  go to state 1


State 1

    0 $accept: prog . $end
    2 prog: prog . line
    3 line: . '\n'
    4     | . exp '\n'
    5 exp: . INT
    6    | . exp exp '+'
    7    | . exp exp '-'
    8    | . exp exp '/'
    9    | . exp exp '*'

    $end  shift, and go to state 2
    INT   shift, and go to state 3
    '\n'  shift, and go to state 4

    line  go to state 5
    exp   go to state 6


State 2

    0 $accept: prog $end .

    $default  accept


State 3

    5 exp: INT .

    $default  reduce using rule 5 (exp)


State 4

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 5

    2 prog: prog line .

    $default  reduce using rule 2 (prog)


State 6

    4 line: exp . '\n'
    5 exp: . INT
    6    | . exp exp '+'
    6    | exp . exp '+'
    7    | . exp exp '-'
    7    | exp . exp '-'
    8    | . exp exp '/'
    8    | exp . exp '/'
    9    | . exp exp '*'
    9    | exp . exp '*'

    INT   shift, and go to state 3
    '\n'  shift, and go to state 7

    exp  go to state 8


State 7

    4 line: exp '\n' .

    $default  reduce using rule 4 (line)


State 8

    5 exp: . INT
    6    | . exp exp '+'
    6    | exp . exp '+'
    6    | exp exp . '+'
    7    | . exp exp '-'
    7    | exp . exp '-'
    7    | exp exp . '-'
    8    | . exp exp '/'
    8    | exp . exp '/'
    8    | exp exp . '/'
    9    | . exp exp '*'
    9    | exp . exp '*'
    9    | exp exp . '*'

    INT  shift, and go to state 3
    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    '/'  shift, and go to state 11
    '*'  shift, and go to state 12

    exp  go to state 8


State 9

    6 exp: exp exp '+' .

    $default  reduce using rule 6 (exp)


State 10

    7 exp: exp exp '-' .

    $default  reduce using rule 7 (exp)


State 11

    8 exp: exp exp '/' .

    $default  reduce using rule 8 (exp)


State 12

    9 exp: exp exp '*' .

    $default  reduce using rule 9 (exp)
